styles/styles.less
@plugin '../less-scripts/autogen-comment-plugin';
autocomment();

@import (reference) './variables.less';
@color_1: var(--text-color);
@color_2: var(--heading-text-color);
@color_3: var(--link-color);
@color_4: var(--link-hover-color);
@color_5: var(--background-color);
@color_6: white;
@color_7: #494f50;
@color_8: #17252e;
@font_family_1: var(--body-font-family);
@font_family_2: var(--heading-font-family);
@font_family_3: var(--fixed-font-family);
@font_family_4: var(--font-family-body);
@font_family_5: "Open Sans Regular";
@font_family_6: "Open Sans Bold";
@background_color_1: var(--background-color);
@background_color_2: var(--background-color-grey);
@background_color_3: var(--background-color-black);
@background_color_4: var(--link-color);
@background_color_5: var(--link-hover-color);
@background_color_6: var(--overlay-background-color);
@background_color_7: unset;
@background_color_8: var(--highlight-background-color);
@background_color_9: #17252e;
@background_color_10: #fafafa;

@font-face {
	font-family: "Open Sans-fallback";
	size-adjust: 105.41%;
	ascent-override: 105%;
	src: local("Arial");
}

:root {
	--link-color: @link-primary-color;
	--link-hover-color: @link-primary-color-hover;
	--background-color: @bg-default-color;
	--background-color-grey: #f9fbfb;
	--background-color-black: #000000;
	--overlay-background-color: #f2f9f5;
	--highlight-background-color: #008533;
	--text-color: #17252e;
	--heading-text-color: #17252e;
	--body-font-family: 'Open Sans Regular', 'Open Sans-fallback';
	--heading-font-family: 'Nedbank Sans Bold', 'Open Sans-fallback';
	--fixed-font-family: 'Roboto Mono', menlo, consolas, 'Liberation Mono', monospace;
	--body-font-size-m: 22px;
	--body-font-size-s: 18px;
	--heading-font-size-xxl: 32px;
	--heading-font-size-xl: 24px;
	--heading-font-size-l: 22px;
	--heading-font-size-m: 20px;
	--heading-font-size-s: 28px;
	--heading-font-size-xs: 16px;
	--nav-height: 64px;
	--banner-height: 100px;
	--section-left-right-padding: 105px;
}

:root .light {
	--background-color: @dotcoza-color-neutrals-white;
	--background-color-banner: @dotcoza-color-neutrals-grey-background;
	--highlight-background-color: @dotcoza-color-greens-default;
	--text-color: @dotcoza-color-title-grey;
	--heading-text-color: @dotcoza-color-title-grey;
}

:root .dark {
	--background-color: @dotcoza-color-neutrals-black;
	--background-color-banner: @dotcoza-color-body-grey;
	--highlight-background-color: @dotcoza-color-greens-default;
	--text-color: @dotcoza-color-neutrals-white;
	--heading-text-color: @dotcoza-color-neutrals-white;
}

body {
	font-size: var(--body-font-size-m);
	margin: 0;
	font-family: @font_family_1;
	line-height: 1.6;
	color: @color_1;
	background-color: @background_color_1;
	display: none;

	&.appear {
		display: unset;
	}
}

header {
	height: var(--nav-height);
}

h1, h2, h3, h4, h5, h6 {
	font-weight: 600;
	line-height: 1.25;
	margin-top: 1em;
	margin-bottom: 0.5em;
	scroll-margin: calc(var(--nav-height) + 1em);
	font-family: @font_family_2;
	color: @color_2;
}

h1 {
	font-size: var(--heading-font-size-xxl);
}

h2 {
	font-size: var(--heading-font-size-xl);
}

h3 {
	font-size: var(--heading-font-size-l);
}

h4 {
	font-size: var(--heading-font-size-m);
}

h5 {
	font-size: var(--heading-font-size-s);
}

h6 {
	font-size: var(--heading-font-size-xs);
}

p {
	margin-top: 1em;
	margin-bottom: 1em;
}

dl {
	margin-top: 1em;
	margin-bottom: 1em;
}

ol {
	margin-top: 1em;
	margin-bottom: 1em;
}

ul {
	margin-top: 1em;
	margin-bottom: 1em;
}

pre {
	margin-top: 1em;
	margin-bottom: 1em;
	font-family: @font_family_3;
	font-size: var(--body-font-size-s);
	overflow: scroll;
}

blockquote {
	margin-top: 1em;
	margin-bottom: 1em;
}

a {
	&:any-link {
		color: @color_3;
		text-decoration: none;
	}

	&:hover {
		text-decoration: underline;
		color: @color_4;
	}
}

code {
	font-family: @font_family_3;
	font-size: var(--body-font-size-s);
	padding: 0.125em;
}

samp {
	font-family: @font_family_3;
	font-size: var(--body-font-size-s);
	padding: 0.125em;
}

input[type=radio] {
	border: 0px;
	transform: scale(1.5);
}

.grey {
	background-color: @background_color_2;
}

.black {
	background-color: @background_color_3;
}

a.button {
	&:any-link {
		font-family: @font_family_4;
		display: inline-block;
		box-sizing: border-box;
		text-decoration: none;
		border: 2px solid transparent;
		padding: 5px 30px;
		text-align: center;
		font-style: normal;
		font-weight: 600;
		cursor: pointer;
		color: @color_5;
		background-color: @background_color_4;
		margin: 16px 0;
		white-space: nowrap;
		overflow: hidden;
		text-overflow: ellipsis;
		border-radius: 5px;
	}

	&:hover {
		background-color: @background_color_5;
		cursor: pointer;
	}

	&:focus {
		background-color: @background_color_5;
		cursor: pointer;
	}
}

button {
	font-family: @font_family_4;
	display: inline-block;
	box-sizing: border-box;
	text-decoration: none;
	border: 2px solid transparent;
	padding: 5px 30px;
	text-align: center;
	font-style: normal;
	font-weight: 600;
	cursor: pointer;
	color: @color_5;
	background-color: @background_color_4;
	margin: 16px 0;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
	border-radius: 5px;

	&:hover {
		background-color: @background_color_5;
		cursor: pointer;
	}

	&:focus {
		background-color: @background_color_5;
		cursor: pointer;
	}

	&:disabled {
		background-color: @background_color_6;
		cursor: unset;

		&:hover {
			background-color: @background_color_6;
			cursor: unset;
		}
	}
}

a.button.secondary {
	background-color: @background_color_7;
	border: 2px solid currentcolor;
	color: @color_1;
}

button.secondary {
	background-color: @background_color_7;
	border: 2px solid currentcolor;
	color: @color_1;
}

main {
	pre {
		background-color: @background_color_6;
		padding: 1em;
		border-radius: 0.25em;
		overflow-x: auto;
		white-space: pre;
	}

	blockquote {
		font-style: italic;
		margin: 3rem;
		text-indent: -1rem;
		hanging-punctuation: first;

		p {
			&::before {
				content: "“";
				line-height: 0;
			}

			&::after {
				content: "”";
				line-height: 0;
			}
		}
	}

	img {
		max-width: 100%;
		height: auto;
	}

	.section {
		background-color: var(--background-color);

		&[data-section-status='loading'],
		&[data-section-status='initialized'] {
			display: none !important;
		}

		&.shaded-background {
			background-color: var(--overlay-background-color);
		}

		&.highlight {
			background-color: @background_color_8;
			color: @color_6;
			text-align: center;

			.default-content-wrapper {
				a.button {
					background-color: @background_color_1;
					color: @color_3;
				}
			}
		}

		&.overlay {
			background-color: @background_color_6;
		}

		&.breadcrumb {
			box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.08);
			height: 75px;
			display: flex;
		}

		&.steps-container {
			margin: auto;
			text-align: center;

			li {
				padding: 20px;
			}
		}

		&.disclaimer {
			font-family: @font_family_5;
			font-size: 12px;
			letter-spacing: 0;
			line-height: 24px;
		}

		&.readytoapply {
			background-color: @background_color_9;
			display: flex;
			justify-content: center;

			h2 {
				color: @color_5;
			}

			>.default-content-wrapper {
				text-align: center;
			}
		}

		&.back-to-top {
			margin-top: 32px;
			padding: 40px 35px 40px 15px;

			p {
				margin: 0;
				text-align: end;
			}

			a.button {
				margin: 0;
				padding: 0;
				background-color: transparent;
				border: none;
			}
		}
	}

	.banner-placeholder {
		height: var(--banner-height);
		display: flex;
		background-color: @background_color_10;
		box-sizing: border-box;
		padding: 16px 2rem;
	}

	.banner {
		margin-top: auto;
		margin-bottom: auto;
	}
}

hr {
	margin-top: 1.5em;
	margin-bottom: 1.5em;
	border: 0;
	border-bottom: 1px solid var(--overlay-background-color);
}

main .home-banner.section {
    background: #f2f9f5;
    margin: 0 calc((100% - 100vw) / 2);
    padding: 24px 10px 0 10px;

	.default-content-wrapper {
		background-color: #fff;
		padding: 24px;
		letter-spacing: 0;
	}

	h1 {
		color: #17252e;
		font-family: "Nedbank Sans Bold";
		font-size: 24px;
		line-height: 28px;
		margin: 0 0 16px 0;
	}

	p {
		color: #494f50;
		font-family: "Open Sans Regular";
		font-size: 16px;
		line-height: 24px;
		margin: unset;
	}
}

@media (@width_768) {
    main .home-banner.section {
        padding: 0;
        display: block;

		.default-content-wrapper {
			margin: 0 22px;
			top: -48px;
			position: relative;
			padding: 64px 22px;
		}

		h1 {
			font-size: 40px;
			line-height: 48px;
			margin: 0 0 24px 0;
		}

		p {
			font-size: 24px;
			line-height: 32px;
		}
    }

    .home-banner .banner-wrapper {
        margin: 0 22px;
        top: -48px;
        position: relative;
        padding: 64px 22px 40px 22px;
    }

    .home-banner .banner-wrapper .banner h1 {
        font-size: 40px;
        line-height: 48px;
        margin: 0 0 24px 0
    }

    .home-banner .banner-wrapper .banner p {
        font-size: 24px;
        line-height: 32px
    }
}

@media (@width_900) {
	:root {
		--heading-font-size-xxl: 48px;
		--heading-font-size-xl: 40px;
		--heading-font-size-l: 32px;
		--heading-font-size-m: 22px;
		--heading-font-size-s: 22px;
		--heading-font-size-xs: 20px;
	}
}

@media only screen and (@width_600) {
	:root {
		--banner-height: 64px;
	}
	main {
		.section {
			padding-left: var(--section-left-right-padding);
			padding-right: var(--section-left-right-padding);

			&.steps-container {
				padding: 64px;
			}
		}
	}
}

@media (@width_1025) {
	main .home-banner.section {
		.default-content-wrapper {
			margin: 0 105px;
			padding: 64px 105px;
		}
	}
}

